[gd_scene load_steps=2 format=3 uid="uid://3r7rlhrwfmfe"]

[ext_resource type="Script" uid="uid://duyq57sg3jn7q" path="res://addons/curved_lines_2d/advanced_tab.gd" id="1_h55kp"]

[node name="AdvancedTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h55kp")
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
tooltip_text = "Export options the currently selected node:
- PNG file (will match rendered size at 100% zoom exactly, scaling up will result in higher definition)
- 'Baked scene' (creates a new scene, which keeps all the nodes in the hierarchy, but converts ScalableVectorShape2D nodes to bare Node2D - useful for getting rid of this plugin)
- 3D Scene (creates a new scene wich creates CSGPolygon3D nodes in Depth mode from all the ScalableVectorShape2D)"
mouse_filter = 0
text = "Export Options*"

[node name="ExportAsPNGButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "PNG Image"

[node name="ExportAsBakedSceneButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "'Baked' Scene
"

[node name="ExportAs3DSceneButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "3D Scene"

[connection signal="pressed" from="HBoxContainer/ExportAsPNGButton" to="." method="_on_export_as_png_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExportAsBakedSceneButton" to="." method="_on_export_as_baked_scene_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExportAs3DSceneButton" to="." method="_on_export_as_3d_scene_button_pressed"]
